--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClCompile Include="..\..\..\IPlug\IPlugBaseGraphics.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IPlugPresets.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp">
+      <Filter>IPlug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
@@ -145,6 +151,12 @@
       <Filter>IPlug\VST2</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IPlugBaseGraphics.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\IPlug\IPlugProcessor.h">
+      <Filter>IPlug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\IPlug\IPlugPresets.h">
       <Filter>IPlug</Filter>
     </ClInclude>
   </ItemGroup>
