--- a/common.props
+++ b/common.props
@@ -10,6 +10,7 @@
     <IGRAPHICS_PATH>$(IPLUG_PATH)\IGraphics</IGRAPHICS_PATH>
     <NANOSVG_PATH>$(IGRAPHICS_PATH)\NanoSVG</NANOSVG_PATH>
     <AGG_PATH>$(IGRAPHICS_PATH)\AGG</AGG_PATH>
+    <RTAUDIOMIDI_PATH>$(IPLUG_PATH)\APP\RTAudioMidi</RTAUDIOMIDI_PATH>
     <VST_SDK>$(SolutionDir)..\..\VST_SDK</VST_SDK>
     <VST3_SDK>$(SolutionDir)..\..\VST3_SDK</VST3_SDK>
     <ASIO_SDK>$(SolutionDir)..\..\ASIO_SDK</ASIO_SDK>
@@ -20,8 +21,8 @@
     <VST3_64_HOST_PATH>$(ProgramW6432)\Steinberg\VST3PluginTestHost\VST3PluginTestHost.exe</VST3_64_HOST_PATH>
     <VST3_32_PATH>$(CommonProgramFiles)\VST3</VST3_32_PATH>
     <VST3_64_PATH>$(CommonProgramW6432)\VST3</VST3_64_PATH>
-    <VST2_32_PATH>$(CommonProgramFiles)\VSTPlugins</VST2_32_PATH>
-    <VST2_64_PATH>$(CommonProgramW6432)\VSTPlugins</VST2_64_PATH>
+    <VST2_32_PATH>$(CommonProgramFiles)\VST2</VST2_32_PATH>
+    <VST2_64_PATH>$(CommonProgramW6432)\VST2</VST2_64_PATH>
     <AAX_32_PATH>$(CommonProgramFiles)\Avid\Audio\Plug-Ins</AAX_32_PATH>
     <AAX_64_PATH>$(CommonProgramW6432)\Avid\Audio\Plug-Ins</AAX_64_PATH>
     <COPY_VST2>1</COPY_VST2>
@@ -35,7 +36,7 @@
     <DEBUG_DEFS>_DEBUG;</DEBUG_DEFS>
     <RELEASE_DEFS>NDEBUG;</RELEASE_DEFS>
     <TRACER_DEFS>TRACER_BUILD;NDEBUG;</TRACER_DEFS>
-    <APP_INC_PATHS>$(ASIO_SDK);$(IPLUG_PATH)\rtaudiomidi;</APP_INC_PATHS>
+    <APP_INC_PATHS>$(ASIO_SDK);$(RTAUDIOMIDI_PATH);</APP_INC_PATHS>    
     <APP_LIBS>dsound.lib;winmm.lib;</APP_LIBS>
     <VST3_INC_PATHS>$(VST3_SDK);</VST3_INC_PATHS>
     <AAX_INC_PATHS>$(AAX_SDK)\Interfaces;$(AAX_SDK)\Interfaces\ACF;$(IPLUG_PATH)\AAX;.</AAX_INC_PATHS>
