vs projects. remove aax lib for now

--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsCairo.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG_src.cpp">
-      <Filter>IGraphics\DrawClasses</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
@@ -216,6 +213,7 @@
     <ClInclude Include="..\..\..\IPlug\IPlugProcessor.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\IPlugEffect_controls.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="IPlug">
