--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-aax.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-aax.vcxproj.filters
@@ -20,9 +20,6 @@
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG_src.cpp">
-      <Filter>IGraphics\DrawClasses</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsCairo.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
@@ -168,6 +165,7 @@
     <ClInclude Include="..\..\..\IPlug\IPlugPresets.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\IPlugEffect_controls.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="resources">
