--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj.filters
@@ -47,6 +47,12 @@
     <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp">
       <Filter>IPlug</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG_src.cpp">
+      <Filter>IGraphics\DrawClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsLice_src.cpp">
+      <Filter>IGraphics\DrawClasses</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
@@ -157,6 +163,12 @@
       <Filter>IPlug</Filter>
     </ClInclude>
     <ClInclude Include="..\IPlugEffect_controls.h" />
+    <ClInclude Include="..\..\..\IPlug\IGraphics\IGraphicsAGG_src.h">
+      <Filter>IGraphics\DrawClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\IPlug\IGraphics\IGraphicsLice_src.h">
+      <Filter>IGraphics\DrawClasses</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="IPlug">
