--- a/IPlugExamples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj.filters
+++ b/IPlugExamples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj.filters
@@ -1,13 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\IGraphicsTest.cpp" />
-    <ClCompile Include="..\app_wrapper\app_dialog.cpp">
-      <Filter>IPlug\APP</Filter>
-    </ClCompile>
-    <ClCompile Include="..\app_wrapper\app_main.cpp">
-      <Filter>IPlug\APP</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IControl.cpp">
       <Filter>IGraphics</Filter>
     </ClCompile>
@@ -23,12 +16,6 @@
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsWeb.cpp">
       <Filter>IGraphics\PlatformClasses</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugBase.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugParameter.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsNanoVG.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
@@ -41,43 +28,12 @@
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsAGG.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\ASIO_SDK\asio.cpp">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\ASIO_SDK\asiodrivers.cpp">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\ASIO_SDK\asiolist.cpp">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\ASIO_SDK\iasiothiscallresolver.cpp">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugAPP.cpp">
-      <Filter>IPlug\APP</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugBaseGraphics.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\APP\RTAudioMidi\RtAudio.cpp">
-      <Filter>IPlug\APP\RTAudioMidi</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\APP\RTAudioMidi\RtMidi.cpp">
-      <Filter>IPlug\APP\RTAudioMidi</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugPresets.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp">
-      <Filter>IPlug</Filter>
-    </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IPlugParameter.cpp" />
+    <ClCompile Include="..\main_dialog.cpp" />
+    <ClCompile Include="..\main_win.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="../config.h" />
     <ClInclude Include="..\IGraphicsTest.h" />
-    <ClInclude Include="..\app_wrapper\app_main.h">
-      <Filter>IPlug\APP</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IGraphics\IControl.h">
       <Filter>IGraphics</Filter>
     </ClInclude>
@@ -111,39 +67,6 @@
     <ClInclude Include="..\..\..\IPlug\IGraphics\IGraphicsWeb.h">
       <Filter>IGraphics\PlatformClasses</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_hdr.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_src.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugBase.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugConstants.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugLogger.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugMidi.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugPlatform.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugParameter.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugStructs.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugUtilities.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\NChanDelay.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IGraphics\IPopupMenu.h">
       <Filter>IGraphics</Filter>
     </ClInclude>
@@ -159,80 +82,20 @@
     <ClInclude Include="..\..\..\IPlug\IGraphics\IGraphicsAGG.h">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\asio.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\asiodrivers.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\asiodrvr.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\asiolist.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\asiosys.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\dsound.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\ginclude.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\iasiodrv.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\iasiothiscallresolver.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\ASIO_SDK\soundcard.h">
-      <Filter>IPlug\APP\ASIO_SDK</Filter>
-    </ClInclude>
     <ClInclude Include="..\resources\resource.h">
       <Filter>resources</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugAPP.h">
-      <Filter>IPlug\APP</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugBaseGraphics.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\APP\RTAudioMidi\RtAudio.h">
-      <Filter>IPlug\APP\RTAudioMidi</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\APP\RTAudioMidi\RtMidi.h">
-      <Filter>IPlug\APP\RTAudioMidi</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugPresets.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugProcessor.h">
-      <Filter>IPlug</Filter>
-    </ClInclude>
-    <ClInclude Include="..\IGraphicsTest_controls.h" />
+    <ClInclude Include="..\..\..\IPlug\IPlugParameter.h" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="IPlug">
-      <UniqueIdentifier>{a079a8ea-246c-4aa6-9b0c-9a186c8390ec}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="IPlug\APP">
-      <UniqueIdentifier>{4ff7bac0-4d8d-4f55-a259-19375f143155}</UniqueIdentifier>
-    </Filter>
     <Filter Include="IGraphics">
       <UniqueIdentifier>{c4ce2c77-eba9-4f56-954f-b5077eeb07ac}</UniqueIdentifier>
     </Filter>
     <Filter Include="IGraphics\PlatformClasses">
       <UniqueIdentifier>{00ff4d95-ab41-4b6a-a490-8d7c2848f82f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="IPlug\APP\RTAudioMidi">
-      <UniqueIdentifier>{4aba7d8b-8eec-4ace-be26-50160ed4e4de}</UniqueIdentifier>
-    </Filter>
     <Filter Include="IGraphics\DrawClasses">
       <UniqueIdentifier>{75e3299f-54fc-4815-84f2-fb80b65c2360}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="IPlug\APP\ASIO_SDK">
-      <UniqueIdentifier>{e25461f4-59c6-429d-af63-80e9e1fd4881}</UniqueIdentifier>
     </Filter>
     <Filter Include="resources">
       <UniqueIdentifier>{c6ab0357-34f0-4ae8-8b4f-225dc387b2db}</UniqueIdentifier>
@@ -253,5 +116,10 @@
     <ResourceCompile Include="..\resources\IGraphicsTest.rc">
       <Filter>resources</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\IGraphicsTest.ico">
+      <Filter>resources</Filter>
+    </Image>
   </ItemGroup>
 </Project>
