fix windows compilation

--- a/IPlugExamples/IGraphicsTest/projects/IGraphicsTest.props
+++ b/IPlugExamples/IGraphicsTest/projects/IGraphicsTest.props
@@ -5,11 +5,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros">
     <BINARY_NAME>IGraphicsTest</BINARY_NAME>
-    <AAX_BUNDLE>$(SolutionDir)build-win\aax\bin\$(BINARY_NAME).aaxplugin</AAX_BUNDLE>
-    <EXTRA_ALL_DEFS>IGRAPHICS_LICE</EXTRA_ALL_DEFS>
     <EXTRA_DEBUG_DEFS />
     <EXTRA_RELEASE_DEFS />
     <EXTRA_TRACER_DEFS />
+    <EXTRA_ALL_DEFS>IGRAPHICS_CAIRO</EXTRA_ALL_DEFS>
   </PropertyGroup>
   <PropertyGroup>
     <TargetName>$(BINARY_NAME)</TargetName>
@@ -36,12 +35,6 @@
     <BuildMacro Include="BINARY_NAME">
       <Value>$(BINARY_NAME)</Value>
     </BuildMacro>
-    <BuildMacro Include="AAX_BUNDLE">
-      <Value>$(AAX_BUNDLE)</Value>
-    </BuildMacro>
-    <BuildMacro Include="EXTRA_ALL_DEFS">
-      <Value>$(EXTRA_ALL_DEFS)</Value>
-    </BuildMacro>
     <BuildMacro Include="EXTRA_DEBUG_DEFS">
       <Value>$(EXTRA_DEBUG_DEFS)</Value>
     </BuildMacro>
@@ -50,6 +43,9 @@
     </BuildMacro>
     <BuildMacro Include="EXTRA_TRACER_DEFS">
       <Value>$(EXTRA_TRACER_DEFS)</Value>
+    </BuildMacro>
+    <BuildMacro Include="EXTRA_ALL_DEFS">
+      <Value>$(EXTRA_ALL_DEFS)</Value>
     </BuildMacro>
   </ItemGroup>
 </Project>
