IPlugProcessor.cpp should be exluded from build because it is #included in the header file

--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj
@@ -423,6 +423,11 @@
     <ClCompile Include="..\..\..\IPlug\IPlugPresets.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Tracer|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Tracer|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\app_wrapper\app_dialog.cpp" />
     <ClCompile Include="..\app_wrapper\app_main.cpp" />
