IDelegate does need to be in a separate file, also fixing broken const stuff

--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect.xcconfig
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect.xcconfig
@@ -17,7 +17,7 @@ EXTRA_APP_INC_PATHS = $(RTAUDIOMIDI_PATH)
 //------------------------------
 // PREPROCESSOR MACROS
 
-EXTRA_ALL_DEFS = OBJC_PREFIX=vIPlugEffect SWELL_APP_PREFIX=Swell_vIPlugEffect GRAPHICS_SCALING IGRAPHICS_NANOVG
+EXTRA_ALL_DEFS = OBJC_PREFIX=vIPlugEffect SWELL_APP_PREFIX=Swell_vIPlugEffect GRAPHICS_SCALING IGRAPHICS_LICE
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
