--- a/common.xcconfig
+++ b/common.xcconfig
@@ -23,6 +23,8 @@ SHARED_PRECOMPS_DIR = $(TARGET_BUILD_DIR)/PCH
 
 // BUILD SETTINGS TO ENABLE DIFFERENT PREPROCESSOR MACROS, INCLUDE PATHS AND FUNCIONALITY-------------------------------
 
+// ***** PREPROCESSOR MACROS
+
 // macros for all debug/release/tracer builds
 DEBUG_DEFS = DEVELOPMENT=1 DEBUG=1 _DEBUG
 RELEASE_DEFS = RELEASE=1 NDEBUG=1
@@ -38,37 +40,48 @@ AUv3_DEFS = AUv3_API $PLUGIN_DEFS
 AAX_DEFS = AAX_API $PLUGIN_DEFS
 APP_DEFS = APP_API __MACOSX_CORE__
 
-// Where the SDKs etc. are located in relation to the plug-in Xcode project
-PKG_MAN_PATH = /usr/local/
-WDL_PATH = $(SRCROOT)/../../../WDL
+// ***** HEADER INCLUDE PATHS
+// Where the SDKs etc. are located in relation to the plug-in Xcode project (which is in the projects subfolder of an IPlug project)
+
+// the top level WDL-OL folder e.g. where this common.xcconfig is
+ROOT = $(SRCROOT)/../../..
+
+PKGMAN_PATH = /usr/local
+
+// if you want to use the homebrew or macports package managers, rather than building static libraries yourself (not advised) you can modify the STATICLIBS_PATH build setting to point to PKGMAN_PATH
+STATICLIBS_PATH = $(ROOT)/Libraries/install/
+STATICLIBS_INC_PATH = $(STATICLIBS_PATH)/include
+
+// IPlug dependencies
+WDL_PATH = $(ROOT)/WDL
 SWELL_PATH = $(WDL_PATH)/swell
-IPLUG_PATH = $(SRCROOT)/../../../IPlug
+IPLUG_PATH = $(ROOT)/IPlug
 RTAUDIOMIDI_PATH = $(IPLUG_PATH)/APP/RTAudioMidi
-//this build setting is included at the xcode project level, since we need all these include paths
+
+// Plug-in SDK paths
+VST3_SDK = $(ROOT)/VST3_SDK
+AAX_SDK = $(ROOT)/AAX_SDK
+CA_SDK = $(ROOT)/CA_SDK
+
+// this build setting is included at the xcode project level, since we need all these include paths
 IPLUG_INC_PATHS = $(WDL_PATH) $(SWELL_PATH) $(IPLUG_PATH)
 
+// IGraphics dependencies
 IGRAPHICS_PATH = $(IPLUG_PATH)/IGraphics
 LICE_PATH = $(WDL_PATH)/lice
 NSVG_PATH = $(IGRAPHICS_PATH)/NanoSVG
 NVG_PATH = $(IGRAPHICS_PATH)/nanovg/src
 NVGMTL_PATH = $(IGRAPHICS_PATH)/MetalNanoVG/src
 AGG_PATH = $(IGRAPHICS_PATH)/agg
-PKG_PATH = $(PKG_MAN_PATH)/include
-FT_PATH = $(PKG_PATH)/freetype2
+FT_PATH = $(STATICLIBS_INC_PATH)/freetype2
 
 // you can optionally include this build setting, by adding it to EXTRA_INC_PATHS in MyProject.xcconfig in order to get all varieties of IGraphics support
-IGRAPHICS_INC_PATHS = $(IGRAPHICS_PATH) $(LICE_PATH) $(FT_PATH) $(NSVG_PATH) $(NVG_PATH) $(NVGMTL_PATH) $(AGG_PATH) $(PKG_PATH)
+IGRAPHICS_INC_PATHS = $(IGRAPHICS_PATH) $(LICE_PATH) $(NSVG_PATH) $(NVG_PATH) $(NVGMTL_PATH) $(AGG_PATH) $(STATICLIBS_INC_PATH) $(FT_PATH)
 
-// Plug-in SDK paths
-VST3_SDK = $(SRCROOT)/../../../VST3_SDK
-AAX_SDK = $(SRCROOT)/../../../AAX_SDK
-CA_SDK = $(SRCROOT)/../../../CA_SDK
+// *****  LINKER/LIBRARY INCLUDE PATHS AND LINKER FLAGS
+STATICLIBS_LIB_PATH = $(STATICLIBS_PATH)/lib
 
-//Linker paths for static libraries
-//PKG_LIB_PATH = $(PKG_MAN_PATH)/lib
-
-//IGRAPHICS_LIB_PATHS = $(PKG_LIB_PATH) // homebrew
-IGRAPHICS_LIB_PATHS = $(SRCROOT)/../../../Libraries
+IGRAPHICS_LIB_PATHS = $(STATICLIBS_LIB_PATH)
 
 ////Static library Paths - on macOS we need to supply an absolute path to the static library, otherwise it will pick up a dynamic library with the same name
 LIB_CAIRO = $(IGRAPHICS_LIB_PATHS)/libcairo.a
@@ -85,7 +98,6 @@ LIB_EX = $(IGRAPHICS_LIB_PATHS)/libexpat.a
 //LIB_BZ = /usr/local/opt/bzip2/lib/libbz2.a
 //LIB_EX = /usr/local/opt/expat/lib/libexpat.a
 
-
 // you can optionally include this build setting, by adding it to EXTRA_LIB_PATHS, in order to get all varieties of IGraphics support
 IGRAPHICS_LNK_FLAGS = $(LIB_CAIRO) $(LIB_FT) $(LIB_PIXMAN) $(LIB_PNG) $(LIB_FC) $(LIB_Z) $(LIB_BZ) $(LIB_EX)
 
@@ -94,7 +106,7 @@ APP_FRAMEWORKS = -framework AppKit -framework CoreMidi -framework CoreAudio
 AU_FRAMEWORKS = -framework AudioToolbox -framework AudioUnit -framework CoreAudio
 AUv3_FRAMEWORKS = -framework AudioToolbox -framework AVFoundation -framework CoreAudio -framework CoreAudioKit
 
-// BUILD SETTINGS FOR BINARY OUTPUT LOCATIONS ------------------------------------------------------------------------------------------------------------------------
+// ***** BINARY OUTPUT LOCATIONS ------------------------------------------------------------------------------------------------------------------------
 
 // Where to build the plug-ins / app bundles ...
 // By default WDL-OL/IPlug builds to user plug-in folder
