--- a/IPlugExamples/IGraphicsTest/projects/IGraphicsTest.xcconfig
+++ b/IPlugExamples/IGraphicsTest/projects/IGraphicsTest.xcconfig
@@ -17,7 +17,7 @@ EXTRA_APP_INC_PATHS = $(RTAUDIOMIDI_PATH)
 //------------------------------
 // PREPROCESSOR MACROS
 
-EXTRA_ALL_DEFS = OBJC_PREFIX=vIGraphicsTest SWELL_APP_PREFIX=Swell_vIGraphicsTest GRAPHICS_SCALING IGRAPHICS_NANOVG
+EXTRA_ALL_DEFS = OBJC_PREFIX=vIGraphicsTest SWELL_APP_PREFIX=Swell_vIGraphicsTest GRAPHICS_SCALING IGRAPHICS_LICE
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
