--- a/Examples/IGraphicsTest/Makefile
+++ b/Examples/IGraphicsTest/Makefile
@@ -71,7 +71,7 @@ LICE_OBJS = lice.o lice_arc.o lice_colorspace.o lice_line.o lice_text.o \
             lice_textnew.o lice_png.o
 endif
 
-OBJS = main_linux.o main_dialog.o $(SWELL_OBJS)
+OBJS = main_linux.o $(SWELL_OBJS)
 RESFILES = resources/IGraphicsTest.rc_mac_dlg resources/IGraphicsTest.rc_mac_menu
 
 ### Compiler/Linker Flags
