Move igraphicstest implementation to a cpp file

--- a/Examples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj
+++ b/Examples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj
@@ -419,6 +419,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsWin.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugParameter.cpp" />
+    <ClCompile Include="..\IGraphicsTest.cpp" />
     <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
