--- a/Examples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj
+++ b/Examples/IGraphicsTest/projects/IGraphicsTest-app.vcxproj
@@ -370,6 +370,7 @@
     <ClInclude Include="..\..\..\IPlug\IGraphics\IPopupMenu.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugDelegate.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugParameter.h" />
+    <ClInclude Include="..\..\..\IPlug\IPlugPlatform.h" />
     <ClInclude Include="..\IGraphicsTest.h" />
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
