move SDK Readmes to their new location
not gonna move the sdks yet because it will break lots of projects I'm currently working

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,6 @@ Ports/*
 IPlug/IGraphics/AGG/agg*
 /IPlug/IGraphics/NanoVG
 /IPlug/IGraphics/MetalNanoVG
-Dependencies/*
+/Dependencies/IGraphics/install
+/Dependencies/IGraphics/build.log
+/Dependencies/IGraphics/build
